[package]
name = "latex-ast"
version = "0.0.3"
authors = ["siriusmart"]
edition = "2021"
description = "AST parser for LaTeX, WIP."
readme = "README.md"
repository = "https://github.com/siriusmart/latex-ast"
license = "AGPL-3.0-or-later"
keywords = ["latex", "tex", "parsing", "ast", "language"]
categories = ["compilers", "encoding", "parsing", "text-processing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[features]
default = ["debug", "eq"]
debug = []
eq = []
